--- a/SistemaDesaparecidos/src/app/components/perfil/perfil.component.html
+++ b/SistemaDesaparecidos/src/app/components/perfil/perfil.component.html
@@ -1,20 +1,51 @@
 <app-header></app-header>
+<div class="perfil-container">
+  <h2>Mi Perfil</h2>
 
-<div class="perfil-container" *ngIf="usuario; else errorTemplate">
-  <h2>Perfil de Usuario</h2>
   <ul>
-    <li><strong>Nombre:</strong> {{ usuario.nombre }}</li>
-    <li><strong>Email:</strong> {{ usuario.email }}</li>
-    <li><strong>CI:</strong> {{ usuario.ci }}</li>
-    <li><strong>Fecha de nacimiento:</strong> {{ usuario.fechaNacimiento }}</li>
-    <li><strong>Celular:</strong> {{ usuario.celular }}</li>
-    <li><strong>Dirección:</strong> {{ usuario.direccion }}</li>
-    <li><strong>Recibe notificaciones:</strong> {{ usuario.notificaciones ? 'Sí' : 'No' }}</li>
+    <li><strong>Nombre:</strong> 
+      <span *ngIf="!modoEdicion">{{ usuario.nombre }}</span>
+      <input *ngIf="modoEdicion" [(ngModel)]="usuario.nombre" type="text">
+    </li>
+
+    <li><strong>CI:</strong> 
+      <span>{{ usuario.ci }}</span>
+    </li>
+
+    <li><strong>Fecha de Nacimiento:</strong> 
+      <span *ngIf="!modoEdicion">{{ usuario.fechaNacimiento }}</span>
+      <input *ngIf="modoEdicion" type="date" [(ngModel)]="usuario.fechaNacimiento">
+    </li>
+
+    <li><strong>Celular:</strong> 
+      <span *ngIf="!modoEdicion">{{ usuario.celular }}</span>
+      <input *ngIf="modoEdicion" [(ngModel)]="usuario.celular" type="number">
+    </li>
+
+    <li><strong>Dirección:</strong> 
+      <span *ngIf="!modoEdicion">{{ usuario.direccion }}</span>
+      <input *ngIf="modoEdicion" [(ngModel)]="usuario.direccion" type="text">
+    </li>
+
+    <li><strong>Email:</strong> 
+      <span>{{ usuario.email }}</span>
+    </li>
+
+    <li><strong>Recibir notificaciones:</strong> 
+      <span *ngIf="!modoEdicion">{{ usuario.notificaciones ? 'Sí' : 'No' }}</span>
+      <input *ngIf="modoEdicion" type="checkbox" [(ngModel)]="usuario.notificaciones">
+    </li>
   </ul>
+
+  <div class="acciones">
+    <button *ngIf="!modoEdicion" class="editar" (click)="habilitarEdicion()">Editar</button>
+    <div *ngIf="modoEdicion">
+      <button class="guardar" (click)="guardarCambios()">Guardar</button>
+      <button class="cancelar" (click)="cancelarEdicion()">Cancelar</button>
+    </div>
+  </div>
+
+  <p style="color: green;" *ngIf="mensaje">{{ mensaje }}</p>
+  <p style="color: red;" *ngIf="mensajeError">{{ mensajeError }}</p>
 </div>
-
-<ng-template #errorTemplate>
-  <p>{{ mensajeError }}</p>
-</ng-template>
-
 <app-footer></app-footer>
