--- a/SistemaDesaparecidos/src/app/components/reportes/reportes.component.scss
+++ b/SistemaDesaparecidos/src/app/components/reportes/reportes.component.scss
@@ -16,6 +16,10 @@ h2 {
   display: inline-block;
 }
 
+.formulario{
+  margin-top: 70px;
+}
+
 .formulario,
 .cards-reportes,
 .formulario-avistamientos,
