--- a/SistemaDesaparecidos/src/app/components/perfil/perfil.component.scss
+++ b/SistemaDesaparecidos/src/app/components/perfil/perfil.component.scss
@@ -1,6 +1,6 @@
 .perfil-container {
   max-width: 600px;
-  margin: 40px auto;
+  margin: 100px auto 40px auto;
   padding: 24px;
   background-color: #ffffff;
   border-radius: 12px;
