Refactorizacion de la visualizacion de reportes

--- a/SistemaDesaparecidos/src/app/components/foro-avistamientos/foro-avistamientos.component.html
+++ b/SistemaDesaparecidos/src/app/components/foro-avistamientos/foro-avistamientos.component.html
@@ -12,7 +12,7 @@
       <p><strong>Lugar:</strong> {{ avistamiento.ubicacion }}</p>
       <p><strong>Fecha:</strong> {{ avistamiento.fecha }}</p>
       <p><strong>Descripción:</strong> {{ avistamiento.descripcion }}</p>
-      <button class="btn-mapa" (click)="mostrarMapa(avistamiento)">📍 Ver Mapa</button>
+      <button class="btn-mapa" (click)="mostrarMapa(avistamiento)">Ver Mapa</button>
     </div>
 
     <div *ngIf="avistamientoSeleccionado" class="popup">
