--- a/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.html
+++ b/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.html
@@ -19,7 +19,7 @@
           <h3>{{ reporte.nombre }}</h3>
           <p><strong>Edad:</strong> {{ reporte.edad }}</p>
           <p><strong>Fecha desaparición:</strong> {{ reporte.fechaDesaparicion | date:'mediumDate' }}</p>
-          <p><strong>Lugar:</strong> {{ reporte.lugarDesaparicion }}</p>
+          <p><strong>Lugar:</strong> {{ reporte.lugarDesaparicionLegible }}</p>
           <p class="descripcion-recortada"><strong>Descripción:</strong> {{ reporte.descripcion || 'No hay descripción disponible' }}</p>
         </div>
 
@@ -46,14 +46,13 @@
   </ng-template>
 </div>
 
-<!-- Popup fuera del contenedor de cards -->
 <div *ngIf="reporteSeleccionado" class="popup">
   <div class="popup-content">
     <div class="popup-left">
       <h3>{{ reporteSeleccionado.nombre }}</h3>
       <p><strong>Edad:</strong> {{ reporteSeleccionado.edad }}</p>
       <p><strong>Desaparecido desde:</strong> {{ reporteSeleccionado.fechaDesaparicion | date:'mediumDate' }}</p>
-      <p><strong>Lugar de desaparición:</strong> {{ reporteSeleccionado.lugarDesaparicion }}</p>
+      <p><strong>Lugar de desaparición:</strong> {{ reporteSeleccionado.lugarDesaparicionLegible }}</p>
       <p><strong>Descripción:</strong> {{ reporteSeleccionado.descripcion || 'No hay descripción disponible' }}</p>
       
       <div *ngIf="reporteSeleccionado.ultimoAvistamiento" class="ultimo-avistamiento">
