--- a/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.html
+++ b/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.html
@@ -1,42 +1,40 @@
-<div class="wrapper">
-  <app-header></app-header>
-
-  <main class="container">
-    <div class="forms">
-      <div class="form signup">
-        <span class="title">Iniciar sesión</span>
-        <form (ngSubmit)="onSubmit()">
-          <div class="input-field">
-            <input
-              type="email"
-              id="email"
-              [(ngModel)]="credenciales.email"
-              name="email"
-              placeholder="Ingrese su email"
-              required
-            />
-            <i class="uil uil-envelope icon"></i>
-          </div>
-          <div class="input-field">
-            <input
-              type="password"
-              id="password"
-              [(ngModel)]="credenciales.password"
-              name="password"
-              placeholder="Ingrese su contraseña"
-              required
-            />
-            <i class="uil uil-lock icon"></i>
-            <i class="uil uil-eye-slash showHidePw"></i>
-          </div>
-          <div class="input-field button">
-            <button type="submit">Iniciar Sesión</button>
-          </div>
-        </form>
-        <p *ngIf="mensaje" class="mensaje">{{ mensaje }}</p>
-      </div>
+<app-header></app-header>
+<main class="container">
+  <div class="forms">
+    <div class="form signup">
+      <h1 class="title">Iniciar sesión</h1>
+      <form (ngSubmit)="onSubmit()">
+        <div class="input-field">
+          <input
+            type="email"
+            id="email"
+            [(ngModel)]="credenciales.email"
+            name="email"
+            placeholder="Ingrese su email"
+            required
+          />
+          <i class="uil uil-envelope icon"></i>
+        </div>
+        <div class="input-field">
+          <input
+            [type]="mostrarPassword ? 'text' : 'password'"
+            id="password"
+            [(ngModel)]="credenciales.password"
+            name="password"
+            placeholder="Ingrese su contraseña"
+            required
+          />
+          <i class="uil uil-lock icon"></i>
+          <button type="button" (click)="togglePasswordVisibility()" class="btn-toggle-password">
+            {{ mostrarPassword ? 'Ocultar' : 'Mostrar' }}
+          </button>
+        </div>
+        <div class="input-field button">
+          <button type="submit">Iniciar Sesión</button>
+        </div>
+      </form>
+      <p *ngIf="mensaje" class="mensaje">{{ mensaje }}</p>
     </div>
-  </main>
-
-  <app-footer></app-footer>
-</div>
+  </div>
+</main>
+<app-footer></app-footer>
