--- a/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.scss
+++ b/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.scss
@@ -7,67 +7,44 @@
   font-family: 'Poppins', sans-serif;
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  background-color: #f1f1f1;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-app-root {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-}
-
-/* Asegura que el contenido principal ocupe el espacio restante */
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-}
-
-/* Centra el contenido del formulario */
 .container {
-  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 90px 20px 35px 20px;
 }
 
-/* Estilo para la tarjeta del formulario */
 .forms {
-  max-width: 430px;
-  width: 100%;
+  display: flex;
+  flex-direction: column;       
+  align-items: center;         
+  justify-content: center;      
+  width: 500px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  padding: 100px;
+  padding: 70px;
 }
 
 .title {
   font-size: 27px;
   font-weight: 600;
-  text-align: center;
+  text-align: center;          
 }
 
 .input-field {
   position: relative;
   height: 50px;
-  width: 100%;
+  width: 100%;                  
   margin-top: 30px;
+  display: flex;
+  justify-content: center;      
 }
 
 .input-field input {
   width: 100%;
   height: 100%;
-  padding: 0 35px;
+  padding: 0 45px;
   border: none;
   outline: none;
   font-size: 16px;
@@ -123,4 +100,21 @@ app-root {
   text-align: center;
   color: #4070f4;
   font-weight: 500;
+}
+
+.password-wrapper {
+  position: relative;
+  flex: 1;
+}
+
+.btn-toggle-password {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  font-size: 13px;
+  color: #4070f4;
+  cursor: pointer;
 }
