--- a/SistemaDesaparecidos/src/app/components/reportes/reportes.component.html
+++ b/SistemaDesaparecidos/src/app/components/reportes/reportes.component.html
@@ -1,27 +1,29 @@
 <app-header></app-header>
-
-<div class="container">
-
+<div class="container" style="padding-top: 100px;">
   <div class="formulario">
     <h2>Crear Nuevo Reporte</h2>
     <app-form-reportes></app-form-reportes>
   </div>
+</div>
 
+<div class="container">
   <div class="cards-reportes">
     <h2>Reportes Existentes</h2>
     <app-cards-reportes></app-cards-reportes>
   </div>
+</div>
 
+<div class="container">
   <div class="formulario-avistamientos" *ngIf="estaLogueado">
     <h2>Reportar Avistamiento</h2>
     <app-form-avistamientos></app-form-avistamientos>
   </div>
+</div>
 
+<div class="container">
   <div class="foro-avistamientos">
     <h2>Foro de Avistamientos</h2>
     <app-foro-avistamientos></app-foro-avistamientos>
   </div>
-
 </div>
-
 <app-footer></app-footer>
