--- a/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
+++ b/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Mapa siempre visible e interactivo -->
-    <div #mapContainer id="mapaFormAvistamiento" style="height: 300px; margin-bottom: 1em;"></div>
+    <div id="mapa" style="height: 300px; margin-bottom: 1em;"></div>
         
     <div class="form-group">
       <label for="descripcion">Descripción</label>
