--- a/SistemaDesaparecidos/src/app/components/form-reportes/form-reportes.component.scss
+++ b/SistemaDesaparecidos/src/app/components/form-reportes/form-reportes.component.scss
@@ -87,3 +87,8 @@ button[type="submit"]:hover {
 button[type="submit"]:active {
   transform: scale(0.98);
 }
+
+#mapContainer {
+  height: 400px;
+  width: 100%;
+}
