--- a/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
+++ b/SistemaDesaparecidos/src/app/components/form-avistamientos/form-avistamientos.component.html
@@ -9,10 +9,13 @@
       <label for="lugar">Lugar del avistamiento</label>
       <!-- No hay un campo de texto, solo el mapa interactivo -->
     </div>
-
-    <div #mapContainer id="mapaFormAvistamiento" style="height: 300px; margin-bottom: 1em;"></div>
+    <div #mapContainer id="mapaFormAvistamiento" 
+     style="height: 400px; width: 100%; margin: 1rem 0; border-radius: 8px; border: 1px solid #ddd;">
+</div>
+    <!-- <div #mapContainer id="mapaFormAvistamiento" style="height: 300px; margin-bottom: 1em;"></div> -->
+    <!-- <div #mapContainer id="mapContainer"></div> -->
     <!-- Mapa siempre visible e interactivo -->
-    <div id="mapa" style="height: 300px; margin-bottom: 1em;"></div>
+    <!-- <div id="mapa" style="height: 300px; margin-bottom: 1em;"></div> -->
         
     <div class="form-group">
       <label for="descripcion">Descripción</label>
